ci file updated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
         mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
         mysql database: 'simple_bank' # Optional, default value is "test". The specified database which will be create
-        mysql root password: ${{ my-secret-pw }} # Required if "mysql user" is empty, default is empty. The root superuser password
+        mysql root password: my-secret-pw # Required if "mysql user" is empty, default is empty. The root superuser password
 
     - name: Set up Go
       uses: actions/setup-go@v3
