--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,14 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
 
-    - uses: mirromutth/mysql-action@v1.1
-      with:
-        host port: 3306 # Optional, default value is 3306. The port of host
-        container port: 3306 # Optional, default value is 3306. The port of container
-        character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
-        collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
-        mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
-        mysql database: 'simple_bank' # Optional, default value is "test". The specified database which will be create
-        mysql root password: my-secret-pw # Required if "mysql user" is empty, default is empty. The root superuser password
+    env:
+      DB_DATABASE: simple_bank
+      DB_USER: root
+      DB_PASSWORD: my-secret-pw
+    - name: Set up MySQL
+      run: |
+        sudo /etc/init.d/mysql start
+        mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
 
     - name: Set up Go
       uses: actions/setup-go@v3
