--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,25 +8,36 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+env:
+  DB_CONNECTION: mysql
+  DB_PORT: 3306
+  DB_DATABASE: simple_bank
+  DB_USERNAME: root
+  DB_PASSWORD: my-secret-pw
 
 jobs:
 
   test:
     name: Test
     runs-on: ubuntu-latest
-    env:
-      DB_DATABASE: simple_bank
-      DB_USER: root
-      DB_PASSWORD: my-secret-pw
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
 
-    - name: Set up MySQL
-      run: |
-        sudo /etc/init.d/mysql start
-        mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
+    - name: 🔥 Initialize MySQL
+      run: sudo systemctl start mysql.service
 
+    - name: 📌 Initialize first database
+      run: |
+        mysql -e 'CREATE DATABASE ${{ env.MYSQL_DATABASE }};' \
+        -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
+
+    - name: 🚀 Boost user
+      run: |
+        mysql -e "ALTER USER '${{ env.DB_USER }}'@'localhost' \
+        IDENTIFIED WITH mysql_native_password BY 'root';" \
+        -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
+        
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
