--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ env:
   DB_PORT: 3306
   DB_DATABASE: simple_bank
   DB_USERNAME: root
-  DB_PASSWORD: my-secret-pw
+  DB_PASSWORD: root
 
 jobs:
 
@@ -25,17 +25,15 @@ jobs:
       uses: actions/checkout@v3
 
     - name: 🔥 Initialize MySQL
-      run: sudo systemctl start mysql.service
+      run: sudo systemctl start mysql.service --user=root --password=root
 
     - name: 📌 Initialize first database
       run: |
-        mysql -e 'CREATE DATABASE ${{ env.MYSQL_DATABASE }};' \
-        -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
+        mysql -e 'CREATE DATABASE ${{ env.MYSQL_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
 
     - name: 🚀 Boost user
       run: |
-        mysql -e "ALTER USER '${{ env.DB_USER }}'@'localhost' \
-        IDENTIFIED WITH mysql_native_password BY 'root';" \
+        mysql -e "ALTER USER '${{ env.DB_USER }}'@'localhost' IDENTIFIED WITH mysql_native_password BY 'root';" \
         -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
         
     - name: Set up Go
