--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: 🔥 Initialize MySQL
-      run: sudo systemctl start mysql.service --user=root --password=root
+      run: sudo systemctl start mysql.service 
 
     - name: 📌 Initialize first database
       run: |
