--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,33 +8,25 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-env:
-  DB_CONNECTION: mysql
-  DB_PORT: 3306
-  DB_DATABASE: simple_bank
-  DB_USERNAME: root
-  DB_PASSWORD: root
 
 jobs:
 
   test:
     name: Test
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+            - '3306:3306'
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    steps:
+      - uses: actions/checkout@v1
+      - run: mysql -h 127.0.0.1 --port 3306 -u root -p my-secret-pw -e 'CREATE DATABASE IF NOT EXISTS simple_bank;'
+
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
-
-    - name: 🔥 Initialize MySQL
-      run: sudo systemctl start mysql.service 
-
-    - name: 📌 Initialize first database
-      run: mysql -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }} -e 'CREATE DATABASE ${{ env.MYSQL_DATABASE }};' 
-
-    - name: 🚀 Boost user
-      run: |
-        mysql -e "ALTER USER '${{ env.DB_USER }}'@'localhost' IDENTIFIED WITH mysql_native_password BY 'root';" \
-        -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
-        
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
