--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,29 +16,37 @@ env:
   DB_USERNAME: root
   DB_PASSWORD: my-secret-pw
 
+env:
+  MYSQL_DATABASE: simple_bank
+  MYSQL_USER: test_user
+  MYSQL_PASSWORD: my-secret-pw
+
 jobs:
 
   test:
     name: Test
     runs-on: ubuntu-latest
+    services:
+      mysql-master:
+        image: mysql:8.0
+        ports:
+          - 3306/tcp
+        env:
+          MYSQL_DATABASE: ${{ env.MYSQL_DATABASE }}
+          MYSQL_USER: ${{ env.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+        options: >-
+          --name=mysql-master
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
 
-    - name: 🔥 Initialize MySQL
-      run: sudo systemctl start mysql.service
-
-    - name: 📌 Initialize first database
-      run: |
-        mysql -hlocalhost -e 'CREATE DATABASE simple_bank;' \
-        -uroot -proot
-
-    - name: 🚀 Boost user
-      run: |
-        mysql -e "ALTER USER 'root'@'localhost' \
-        IDENTIFIED WITH mysql_native_password BY 'root';" \
-        -uroot -pmy-secret-pw
-        
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
