--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,8 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
+    - name: Run migration
+      run: make mysql_migrateup
 
     - name: Test
       run: go test -v ./...
