--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,11 @@ jobs:
         go-version: 1.19
 
     - name: Install golang-migrate
-      run: curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
-      
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.darwin-amd64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /user/bin/
+        which migrate
+
     - name: Run migration
       run: make mysql_migrateup
 
