--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         which migrate
 
     - name: Run migration
-      run: make mysql_migrateup
+      run: Makefile mysql_migrateup
 
     - name: Test
       run: go test -v ./...
