--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2 # More information on this action can be found below in the 'AWS Credentials' section
       with:
-        role-to-assume: arn:aws:iam::517932139066:role/deployment
+        aws_access_key_id: ${{ secret.AWS_ACCESS_KEY_ID }}
+        aws_secret_access_key: ${{ secret.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-1
 
     - name: Login to Amazon ECR
