--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ DB_SOURCE=root:my-secret-pw@tcp(localhost:3306)/simple_bank?parseTime=true&autoc
 SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
+MIGRATE_SOURCE=mysql://root:my-secret-pw@tcp(mysql:3306)/simple_bank
