--- a/app.env
+++ b/app.env
@@ -1,6 +1,6 @@
 DB_DRIVER=mysql
-DB_SOURCE=root:my-secret-pw@tcp(localhost:3306)/simple_bank?parseTime=true&autocommit=true
+DB_SOURCE=root:my-secret-pw@tcp'(localhost:3306')/simple_bank?parseTime=true&autocommit=true
 SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
-MIGRATE_SOURCE=mysql://root:my-secret-pw@tcp(mysql:3306)/simple_bank
+MIGRATE_SOURCE=mysql://root:my-secret-pw@tcp'(mysql:3306')/simple_bank
